updated logger routine - file writer in separate thread